# hermes-edge-pitch

./: README.es.md  README.md  __init__.py  config.example.yaml  plugin.yaml  pyproject.toml
edge_pitch/: __init__.py  i18n.py
tests/: test_provider.py
